[package]
name = "ride_new"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = {version= "1.5.4", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = {version= "1.39.1", features = ["behavior-version-latest"] }
tokio = { version = "1.39.2", features = ["full"] }
lambda_runtime = "0.6.0"
serde = "1.0.136"
serde_json = "1.0.85"
anyhow = "1.0.86"
chrono = "0.4.38"

[[bin]]
name = "bootstrap"
path = "src/main.rs"